# stdusk

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUTURE.md  LEDGER.md  PARITY.md  PLAN.md  README.md  TESTING.md  V1.md  config.example.toml
.agents/rules/: code-principles.md  implementation.md  performance.md  platform.md  project.md  terminal.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: native-release.yml  native.yml  pages.yml
assets/schemes/: Alabaster  C64  Edge Light  Everforest Light  Flexoki Light  GitHub Light  Iceberg Light  Royal  Selenized White  Shaman  Zenbones Light
native/: .gitignore  Cargo.toml  LEDGER.md  PARITY.md  PLAN.md  README.md  TESTING.md  V1.md  build.rs  config.example.toml
native/.agents/rules/: implementation.md  project.md  testing.md  ui.md
native/assets/: stdusk.icns
native/assets/schemes/: Catppuccin Latte  CrayonPonyFish  Dayfox  Gruvbox Light  Gruvbox Material Light  Melange Dark  PaperColor Light  Selenized Light  Tango Light
native/packaging/: Info.plist  README.md  stdusk.rb
native/src/: colors.rs  config.rs  finder.rs  links.rs  main.rs  osc.rs  palette.rs  pane.rs  procwatch.rs  progress.rs  search.rs  session.rs  settings.rs  shell.rs  sync.rs  tabs.rs  terminal.rs  themes.rs  ui.rs  workspace.rs
packaging/: README.md  stdusk.rb
site/: CNAME  index.html
src/: colors.rs  config.rs  finder.rs  fonts.rs  instance.rs  keys.rs  links.rs  macos.rs  main.rs  mouse.rs  palette.rs  pane.rs  procwatch.rs  progress.rs  search.rs  session.rs  settings.rs  shell.rs  sync.rs  tabs.rs  terminal.rs  themes.rs  tray.rs  ui.rs  widgets.rs  workspace.rs
