[package]
name = "stdusk"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.26.0"
base64 = "0.22.1"
eframe = { version = "0.35.0", features = ["glow", "__screenshot"] }
egui = "0.35.0"
global-hotkey = "0.8.0"
portable-pty = "0.9.0"
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"
