[package]
name = "stdusk"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.26.0"
base64 = "0.22.1"
eframe = { version = "0.35.0", features = ["glow", "__screenshot"] }
egui = "0.35.0"
global-hotkey = "0.8.0"
portable-pty = "0.9.0"
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
toml = "1.1.3"

[dev-dependencies]
proptest = "1.8.0"

[lints.rust]
unsafe_code = "deny" # one justified local #[allow] in main (edition-2024 set_var); nothing else

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic allow-list, justified per-lint for a GUI + parser crate:
cast_possible_truncation = "allow" # deliberate: pct as u8, cols as u16 for PtySize
cast_sign_loss = "allow"           # grid line i32 -> usize after .max(0)
cast_precision_loss = "allow"      # u8 pct -> f32 for the progress bar
cast_possible_wrap = "allow"       # usize offsets -> i32 for scroll deltas
module_name_repetitions = "allow"  # OscScanner in osc, TabState in terminal read fine
missing_errors_doc = "allow"       # no public library API to document
missing_panics_doc = "allow"       # startup-invariant expects are documented inline
doc_markdown = "allow"             # terminal jargon (OSC, ANSI, pty, cwd, Tabby) isn't code
enum_glob_use = "allow"            # `use NamedColor::*` in a 16-arm match reads fine
float_cmp = "allow"                # exact != 0.0 / defaults comparisons are intentional
similar_names = "allow"            # bel/st, cw/ch, rows/cols are the domain vocabulary
too_many_lines = "allow"           # the eframe render loop is legitimately long
too_many_arguments = "allow"       # render_grid threads ui + rect + term + metrics per pane
